draft-packages/tooltip/KaizenDraft/Tooltip/Tooltip.scss
@import "~@kaizen/design-tokens/sass/color-vars";
@import "~@kaizen/design-tokens/sass/border-vars";
@import "~@kaizen/design-tokens/sass/shadow-vars";
@import "~@kaizen/design-tokens/sass/variable-identifiers";
@import "~@kaizen/deprecated-component-library-helpers/styles/type";
@import "~@kaizen/component-library/styles/animation";

// Sync with Tooltip.tsx
$arrow-height: 10px;
$arrow-width: 20px;

// Ash for Heart theme, Wisteria200 for Zen. Switching not needed when Zen is removed.
$dt-tooltip-content-border: var(
  $kz-var-id-color-ash,
  $kz-var-color-wisteria-200
);

.tooltip {
  pointer-events: none;
}

.tooltipContent {
  border-radius: $kz-var-border-solid-border-radius;
  transition: opacity $ca-duration-fast, transform $ca-duration-fast;
  padding: $ca-grid / 2 $ca-grid / 2;
  z-index: 2;
  border: $kz-var-border-solid-border-width $kz-var-border-solid-border-style
    $dt-tooltip-content-border;
  box-shadow: $kz-var-shadow-small-box-shadow;
  text-align: center;
  max-width: 400px;
  // I'm having a problem getting the tooltip width to match the size of the text content.
  // As a workaround, I'm just going to set a min width of 200px. It should be enough
  // in most cases.
  min-width: 200px;
  @include kz-typography-paragraph-body($size: 14);
  top: initial; // Overrides the `top` value of kz-typography-paragraph-body
  color: $kz-var-color-wisteria-800;
  background-color: white;
}

.arrow {
  z-index: 2;
  // This is required by popper, otherwise positioning issues will exist.
  // https://github.com/popperjs/react-popper/issues/354#issuecomment-616540651
  position: absolute;

  [data-popper-placement^="top"] & {
    bottom: 0;
  }

  [data-popper-placement^="bottom"] & {
    top: 0;

    // There is a conflict with the popper arrow styling, which also
    // adds a transform to the arrow. Hence, we need this additional
    // wrapper, just to rotate it.
    .arrowInner {
      transform: rotate(180deg);
    }
  }
}

.arrowWhite::before,
.arrowWhite::after {
  content: "";
  position: absolute;
  left: 50%;
  border-left: ($arrow-width / 2) solid transparent;
  border-right: ($arrow-width / 2) solid transparent;
  margin-left: -($arrow-width / 2);
}

.arrowWhite::before {
  border-top: $arrow-height solid $dt-tooltip-content-border;
}

.arrowWhite::after {
  border-top: $arrow-height solid white;
  margin-top: -2px;
  z-index: 2;
}

.arrowShadow::before {
  border-top: 0px solid $dt-tooltip-content-border;
}

// Triangle portion is a little darker to bring out shadow
.arrowShadow::after {
  border-top: $arrow-height solid
    rgba($kz-var-color-wisteria-800-rgb-params, 0.09);
  margin-top: 1px;
  filter: blur(4px);
  z-index: 2;
}

.displayInline {
  display: inline;
}

.displayBlock {
  display: block;
}

.displayInlineBlock {
  display: inline-block;
}

.displayFlex {
  display: flex;
}

.displayInlineFlex {
  display: inline-flex;
}

